--- a/Quasar Spectroscopy Sound.app/Contents/Info.plist
+++ b/Quasar Spectroscopy Sound.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18F132</string>
+	<string>19H2</string>
 	<key>CFBundleDisplayName</key>
 	<string>Quasar Spectroscopy Sound</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9F2000</string>
+	<string>11C505</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>17E189</string>
+	<string>19B90</string>
 	<key>DTSDKName</key>
-	<string>macosx10.13</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>0941</string>
+	<string>1131</string>
 	<key>DTXcodeBuild</key>
-	<string>9F2000</string>
+	<string>11C505</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.11</string>
 	<key>NSHighResolutionCapable</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
